--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 h1{
     text-align: center;
     font-family: 'Crete Round', serif;
-    color:red;
+    color:white;
 }
 h2,h3{
     text-align: center;
